Adding chili contest for december

--- a/_cookoffs/oct2023.md
+++ b/_cookoffs/oct2023.md
@@ -54,6 +54,6 @@ Please reach out to [Aven Arlington](mailto:aven.arlington@gmail.com) for questi
 
 
 ## Post Event - Knowledge Gained
-- For queso/chilli recipes the extra tasting bowl was not needed and overcomplicated things.
+- For queso/chili recipes the extra tasting bowl was not needed and overcomplicated things.
 - We need to have better pre-event marketing and day of event material on the tables.
 - Set expectations for servers to drum up excitement with the customers
